# Fissura

./: .gitignore  .gitmodules  .lvimrc  .ycm_extra_conf.py  CMakeLists.txt  README.md  setup.sh
modules/core/: CMakeLists.txt
modules/core/include/core/: assert.h  platforms.h  types.h
modules/core/include/core/allocators/: allocator.h  allocator.inl  page_allocator.h  page_allocator_linux.h  page_allocator_windows.h  proxy_allocator.h  stack_allocator.h  stl_allocator.h  trace_allocator.h  trace_allocator_linux.h  trace_allocator_windows.h
modules/core/include/core/dlmalloc/: malloc.h
modules/core/spikes/: CMakeLists.txt
modules/core/spikes/stlallocator/: CMakeLists.txt
modules/core/spikes/stlallocator/src/: main.cpp
modules/core/src/core/: assert.cpp  trace.cpp
modules/core/src/core/allocators/: allocator.cpp  double_buffered_allocator.cpp  double_stack_allocator.cpp  heap_allocator.cpp  page_allocator_linux.cpp  page_allocator_windows.cpp  pool_allocator.cpp  proxy_allocator.cpp  stack_allocator.cpp  trace_allocator_linux.cpp  trace_allocator_windows.cpp
modules/core/src/core/dlmalloc/: malloc.cpp
modules/core/tests/: runner.cpp
modules/core/tests/allocators/: doublebufferedallocator.cpp  doublestackallocator.cpp  pageallocator.cpp  poolallocator.cpp  traceallocator.cpp
modules/core/tests/core/allocators/: allocator.cpp  doublestackallocator.cpp  heapallocator.cpp  pageallocator.cpp  poolallocator.cpp  proxyallocator.cpp  stackallocator.cpp  traceallocator.cpp
modules/core/tests/include/: global_context.h
modules/core/tests/src/: global_context.cpp  runner.cpp
modules/core/tests/src/allocators/: heap_allocator.cpp  proxy_allocator.cpp  stack_allocator.cpp  trace_allocator.cpp
modules/fscore/: CMakeLists.txt
modules/fscore/include/: fscore.h
modules/fscore/include/fscore/: assert.h  clock.h  globals.h  log.h  logger.h  macros.h  memory.h  platforms.h  string.h  trace.h  types.h  util.h
modules/fscore/include/fscore/allocators/: allocator.h  double_buffered_allocator.h  double_stack_allocator.h  heap_allocator.h  malloc_allocator.h  page_allocator.h  page_allocator_linux.h  page_allocator_windows.h  pool_allocator.h  proxy_allocator.h  stack_allocator.h  stl_allocator.h  thread_safe_allocator.h  trace_allocator.h  trace_allocator.inl  trace_allocator_linux.h  trace_allocator_windows.h
modules/fscore/include/fscore/debugging/: arena_report.h  assert.h  logger.h  memory.h  memory_logging.h  memory_reporting.h  memory_reporting.inl  utils.h  utils.inl
modules/fscore/include/fscore/memory/: allocation_info.h  allocation_policy.h  bounds_checking_policy.h  extended_memory_tracking_policy.h  freelist.h  growing_stack_allocator.h  heap_allocator.h  linear_allocator.h  malloc.h  malloc_allocator.h  memory.h  memory_area.h  memory_arena.h  memory_tagging_policy.h  memory_tracker.h  memory_tracking_policy.h  new.h  page_allocator.h  policies.h  pool_allocator.h  pool_allocator.inl  source_info.h  stack_allocator.h  stack_allocator.inl  stl_allocator.h  thread_policy.h  utils.h  utils.inl
modules/fscore/include/fscore/sdl/: malloc_hook.h
modules/fscore/include/fscore/utils/: clock.h  delegate.h  event.h  flags.h  globals.h  macros.h  math.h  platforms.h  random.h  string.h  types.h
modules/fscore/spikes/: CMakeLists.txt
modules/fscore/spikes/benchmark-arenas/: CMakeLists.txt
modules/fscore/spikes/benchmark-arenas/src/: main.cpp
modules/fscore/spikes/benchmark-delegates/src/: main.cpp
modules/fscore/spikes/delegates/src/: main.cpp
modules/fscore/spikes/flags/src/: main.cpp
modules/fscore/spikes/freelist/: CMakeLists.txt
modules/fscore/spikes/freelist/src/: main.cpp
modules/fscore/spikes/logger/: CMakeLists.txt
modules/fscore/spikes/logger/content/: logger.xml
modules/fscore/spikes/logger/src/: main.cpp
modules/fscore/spikes/sdlhooks/: CMakeLists.txt
modules/fscore/spikes/sdlhooks/src/: main.cpp
modules/fscore/spikes/stlallocator/: CMakeLists.txt
modules/fscore/spikes/stlallocator/src/: main.cpp
modules/fscore/src/: assert.cpp  log.cpp
modules/fscore/src/core/: assert.cpp  clock.cpp  logger.cpp  memory.cpp  string.cpp  trace.cpp  util.cpp
modules/fscore/src/core/debugging/: assert.cpp  (+1 more)
modules/fscore/src/debugging/: assert.cpp  logger.cpp  memory.cpp  memory_logging.cpp  utils_unix.cpp
modules/fscore/src/memory/: extended_memory_tracking_policy.cpp  growing_stack_allocator.cpp  heap_allocator.cpp  linear_allocator.cpp  malloc.cpp  page_allocator.cpp  pool_allocator.cpp  stack_allocator.cpp  utils_unix.cpp  utils_windows.cpp
modules/fscore/src/sdl/: malloc_hook.cpp
modules/fscore/src/utils/: clock.cpp  math.cpp  string.cpp
modules/fscore/tests/include/: global_context.h
modules/fscore/tests/src/: delegate.cpp  event.cpp  flags.cpp  global_context.cpp  runner.cpp  string.cpp
modules/fsgame/: CMakeLists.txt
modules/fsgame/include/: fsgame.h
modules/fsgame/include/fsgame/: game_app.h
modules/fsgame/spikes/: CMakeLists.txt
modules/fsgame/spikes/basic_game_app/: CMakeLists.txt
modules/fsgame/src/: game_app.cpp
modules/fsgame/src/app/: game_app.cpp  game_context.cpp
modules/fsgame/src/process/: delay_process.cpp  process.cpp  process_manager.cpp
modules/fsgame/tests/src/: runner.cpp
modules/fsio/: CMakeLists.txt
modules/fsio/include/: fsio.h
modules/fsio/spikes/: CMakeLists.txt
modules/fsio/src/: osfile.cpp  osfile_unix.cpp  osfile_windows.cpp  temp.cpp
modules/fsio/src/file/: disk_device.cpp  disk_file.cpp  gzip_device.cpp  gzip_file.cpp  osfile.cpp  osfile_unix.cpp  pref_device.cpp  temp_device.cpp
modules/fsio/tests/include/: global_fixture.h
modules/fsio/tests/src/: disk_device.cpp  disk_file.cpp  file_system.cpp  gzip_file.cpp  osfile.cpp  runner.cpp
modules/fstest/: CMakeLists.txt
modules/fstest/include/: fstest.h
modules/fstest/include/fstest/: global_context.h
modules/fstest/spikes/: CMakeLists.txt
modules/fstest/src/fstest/: global_context.cpp
modules/fsutil/spikes/delegates/: CMakeLists.txt
spikes/template/: CMakeLists.txt
spikes/template/src/: main.cpp
(+318 files in other folders)
