cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(fscoreSpikes)

# add_subdirectory(stlallocator)
add_subdirectory(logger)
# add_subdirectory(sdlhooks)
# add_subdirectory(freelist)
# add_subdirectory(benchmark-arenas)
# add_subdirectory(delegates)
# add_subdirectory(flags)
# add_subdirectory(benchmark-delegates)
